k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travel-tours
  labels:
    app: travel-tours-app
