k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-backend
  namespace: travel-tours
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travel-backend
  template:
    metadata:
      labels:
        app: travel-backend
    spec:
      containers:
        - name: travel-backend
          image: teodoraspasikjj/travel-app-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
