k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-ingress-api
  namespace: travel-tours
spec:
  ingressClassName: nginx
  rules:
    - host: travel.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: travel-backend
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-ingress-frontend
  namespace: travel-tours
spec:
  ingressClassName: nginx
  rules:
    - host: travel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: travel-frontend
                port:
                  number: 80
